2010-11-03  NIIBE Yutaka  <gniibe@fsij.org>

	Bug fixes.
	* src/ac.c (verify_admin_0): Initialize pwsb earlier.
	* src/openpgp-do.c (copy_do_1): Access do_data[0] (was: do_data[1]).

2010-11-02  NIIBE Yutaka  <gniibe@fsij.org>

	DfuSe support.
	* tool/dfuse.py (DFU_STM32.download): Put '#' for each 4-KiB.
	Added 0-length write to finish download.
	Take intel_hex object as argument.
	(DFU_STM32.ll_upload_block): New method.
	(DFU_STM32.dfuse_read_memory): New method.
	(DFU_STM32.verify): New method.
	(get_device): Support DFU_STM32PROTOCOL_0 too (for CQ STARM).

	* tool/dfuse.py: Renamed from dfu_stmicroelectronics_extention.py.

2010-11-01  NIIBE Yutaka  <gniibe@fsij.org>

	* tool/intel_hex.py: New file.
	* tool/dfu_stmicroelectronics_extention.py: New file.

2010-10-28  NIIBE Yutaka  <gniibe@fsij.org>

	* src/gnuk.h (OPENPGP_CARD_INITIAL_PW3): New.
	* src/ac.c (verify_admin_0): Use OPENPGP_CARD_INITIAL_PW3.

2010-10-23  NIIBE Yutaka  <gniibe@fsij.org>

	* Version 0.3.

	* src/usb_desc.c (gnukStringSerial): Updated.

2010-10-22  NIIBE Yutaka  <gniibe@fsij.org>

	* src/gnuk.ld.in (.gnuk_random): Fix description so that
	padding with 0xffffffff will be in gnuk.hex.

	* src/openpgp.c (file_selection): Change type (was: int).
	(FILE_NONE..FILE_EF_SERIAL): Change the values.

	* src/configure: Added STBee Mini support.
	* boards/STBEE_MINI/mcuconf.h: New.
	* boards/STBEE_MINI/board.mk: New.
	* boards/STBEE_MINI/board.h: New.
	* boards/STBEE_MINI/board.c: New.

	* ChibiOS_2.0.2/os/hal/platforms/STM32/hal_lld.c
	(pal_default_config): STBee Mini uses STM32F103CBT6 which expose
	no GPIO E port.

2010-10-21  NIIBE Yutaka  <gniibe@fsij.org>

	* boards/common/hw_config.c (Get_SerialNum): Removed.
	* src/usb_prop.c (gnuk_device_init): Remove calling Get_SerialNum.
	* src/usb_desc.c (gnukStringSerial): Updated.
	* boards/CQ_STARM/board.c (set_led): Fix polarity.

2010-10-20  NIIBE Yutaka  <gniibe@fsij.org>

	* FSIJ_SERIAL_NUMBER: New.